<resources>
    <string name="app_name">BarVolume</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hasil">Hasil</string>
    <string name="hitung">Hitung</string>
    <string name="tinggi">Tinggi</string>
    <string name="move_with_object">Move with object</string>
    <string name="object_recevied">Object Recevied</string>
</resources>
