<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/act_vertical_margin"
    android:paddingLeft="@dimen/act_horizontal_margin"
    android:paddingRight="@dimen/act_horizontal_margin"
    android:paddingTop="@dimen/act_vertical_margin"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/panjang" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:autofillHints="@string/panjang"
        android:id="@+id/edit_lenght"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lebar"/>
    <EditText
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:autofillHints="@string/lebar"
        android:id="@+id/edt_width"
        android:lines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"/>

    <EditText
        android:labelFor="@id/edt_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_height"
        android:inputType="numberDecimal"
        android:autofillHints="@string/tinggi"
        android:lines="1"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:gravity="center"
        android:text="@string/hasil"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/act_vertical_margin"
        android:text="@string/move_with_object"
        android:id="@+id/btn_move_activity_object" />

</LinearLayout>